# dump

./: .gitignore  README  README.md  fizzbuzz.c  ltgotch.go  markov_algo_intpr.py  thread_img.py
advent/2021/: 01_1.rs  01_2.rs  02_1.rs  02_2.rs  03_1.rs  03_2.cc  04_1.rs  04_2.rs  05_1.py  05_2.py  06_1.rs  06_2.rs  07_1.rs  07_2.rs  08_1.rs  08_2.py  08_2.rs  09_1.rs  09_2.rs  10_1.rs  10_2.rs  11_1.rs  11_2.rs  12_1.rs  12_2.rs  13_1.rs  13_2.rs  14_1.rs  14_2.rs  15_1.rs  15_2.rs  16_1.rs  16_2.rs  17.rs  18_1.rs  18_2.rs  19.rs  20.rs  21.go  22.rs  (+4 more)
advent/2022/: 17.c
advent/2023/: 01.c  02.rs  03.cc  04.rs  05.rs  06.rs  07.c  08.rs  09.go  10.go  11.rs  12.rs  13.go  14.go  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.cc
bf/src/: cmd.rs  error.rs  interpreter.rs  main.rs
broken/: fatread-alpha.c
broken/wordle/: Makefile  game.c
broken/ytdownload/: Cargo.toml
broken/ytdownload/src/: main.rs
iced-practice/: Cargo.toml
iced-practice/src/: image_viewer.rs
im2ascii/: Cargo.toml  ascii.txt  kanata.txt  setsuna.txt  wwf.txt
im2ascii/src/: cmd.rs  main.rs
im2ascii/test/: kanata.txt  osaka.txt  (+3 more)
ime-dicts/: shinymas_dict.txt
img2ascii/: Cargo.toml
js-scratch/: asyncprac.js
kaibunsyo/: chadnaga.txt  kaho.txt  ベトナムの独立宣言（拙い日本語翻訳）.txt  翔ゲイ.txt
lc3/: .gitignore  assembler.c  sim.c  simulator.c
lc3-toys/: .gitignore
leastsqr/: main.c  matrix.h
lib/: Makefile
markov/: pafss1.txt
markovtext/: main.py
matarith/: main.c  matrix.c  matrix.h
matrix-arith/: main.c
misc/: dstring.h  fizzbuzz.c  letterboxd_import.go  ltgotch.go  markov_algo_interpreter.py  rym2letterboxd.py  you_aint_built_for_these_streets.cuh
mono/: go_http_scratch.go  lowtiergotch.go  rizzbuzz.c  rym2letterboxd.py  thread_img.py
neural-network/: .clang-format  .gitignore  README.md  main.cpp
nnv2/: .clang-format  .gitignore  CMakeLists.txt  README.md
nnv2/core/: activation.cc  activation.h  array.cc  array.h  common.h  conv.cc  conv.h  dataloader.cc  dataloader.h  dataset.h  flatten.cc  flatten.h  initializer.cc  initializer.h  layer.h  linear.cc  linear.h  loss.cc  loss.h  mathfunc.cc  mathfunc.h  maxpool.cc  maxpool.h  mnist.cc  mnist.h  network.cc  network.h  nnv2.h  optimizer.cc  optimizer.h  utils.h
nnv2/examples/: 3conv2fc_rms.cc  lenet5.cc
nnv2/mocks/: activation_test.cc  conv_test.cc  dataloader_test.cc  linear_test.cc  mathfunc_test.cc  maxpool_test.cc  test_utils.h
ojsubs/: cf_1200e_compress_words.py  cf_1549d_int_have_friends.py  fc009_sumez.pas  fc128_lock.pas  icpc21_mn_l.cpp  vnoi_chain2.cpp
rust-ui-practice/: Cargo.toml
textgen/: beemovie.txt  main.py
tree-set/: treeset.h
useless-batch-scripts/: abitrate.cmd
wordle/: Makefile  answers.h  dict.c  dict.h  game.c  map.c  map.h  pool.h
ytd/: Cargo.toml
ytdownload/: Cargo.toml
ytdownload/src/: cmd.rs  download.rs  fetcher.rs  main.rs
(+211 files in other folders)
