[package]
name = "ytdownload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
features = "0.10.0"
indicatif = "0.17.0"
json = "0.12.4"
regex = "1.6.0"
serde_json = "1.0.85"
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.0"
